[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "mistral"
version = "0.1"
description = "Mistral 7B."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2 Software License ",
]
dependencies = [
    "torch==2.0.0", "torchvision==0.15.1", 
    "torchaudio==2.0.1",
    "fire", "sentencepiece", "xformers"
]


[tool.setuptools.packages.find]
exclude = ["assets*", "backup*", "deploy", "tutorials*", "tests*"]

[tool.wheel]
exclude = ["assets*", "backup*", "deploy", "tutorials*", "tests*"]
